runtime/grammars/sources/edoc/test/corpus/macros.txt
================================================================================
link: module
================================================================================
{@link erlang}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)
    (expression
      (module))))

================================================================================
link: local function
================================================================================
{@link min/2}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)
    (expression
      (function)
      (arity))))

================================================================================
link: remote function
================================================================================
{@link erlang:min/2}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)
    (expression
      (module)
      (function)
      (arity))))

================================================================================
link: local type
================================================================================
{@link term()}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)
    (expression
      (type))))

================================================================================
link: remote type
================================================================================
{@link erlang:term()}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)
    (expression
      (module)
      (type))))

================================================================================
nullary macro
================================================================================
{@time}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)))

================================================================================
type macro with escape
================================================================================
{@type {options, edoc:option_list()@}}

--------------------------------------------------------------------------------

(source
  (macro
    (tag)
    (argument
      (macro_escape))))

================================================================================
macro in parens
================================================================================
The time ({@time})

--------------------------------------------------------------------------------

(source
  (macro
    (tag)))
