runtime/grammars/sources/edoc/test/corpus/xhtml.txt
================================================================================
em tag
================================================================================
<em>Hello</em>

--------------------------------------------------------------------------------

(source
  (em_xhtml_tag
    (open_xhtml_tag)
    (xhtml_tag_content)
    (close_xhtml_tag)))

================================================================================
strong tag
================================================================================
<strong>Hello</strong>
<strong>Hello
World</strong>

--------------------------------------------------------------------------------

(source
  (strong_xhtml_tag
    (open_xhtml_tag)
    (xhtml_tag_content)
    (close_xhtml_tag))
  (strong_xhtml_tag
    (open_xhtml_tag)
    (xhtml_tag_content)
    (close_xhtml_tag)))

================================================================================
multi-line list
================================================================================
<ul>
<li>Foo</li>
<li>Bar</li>
<li>Baz</li>
<ul>

--------------------------------------------------------------------------------

(source
  (xhtml_tag)
  (xhtml_tag)
  (xhtml_tag)
  (xhtml_tag)
  (xhtml_tag)
  (xhtml_tag)
  (xhtml_tag)
  (xhtml_tag))

================================================================================
horizontal rule tag
================================================================================
<hr/>
<hr/>

--------------------------------------------------------------------------------

(source
  (xhtml_tag)
  (xhtml_tag))
